First working version of the sync
Pull data from Plentymarkets and verify that the correct headers are
used. Read data from the google sheet, handle empty rows and format the
header names. Compare both data sets, depending on the synctype either
text comparission or simple integer comparission.
Write the changes to the google sheet, which can be connected to a
facebook data feed. Log changes within the log folder and clean up the
folder every day.

Signed-off-by: Sebastian Fricke <sebastian.fricke.linux@gmail.com>

--- a/example_config.ini
+++ b/example_config.ini
@@ -1,2 +1,9 @@
-[Plenty Export URL]
-url=https://panasiam.plentymarkets-cloud01.com/export/{Export ID}/{Token}
+[General]
+inventory_plenty_url=https://panasiam.plentymarkets-cloud01.com/export/...
+attr_plenty_url=https://panasiam.plentymarkets-cloud01.com/export/...
+price_plenty_url=https://panasiam.plentymarkets-cloud01.com/export/...
+text_plenty_url=https://panasiam.plentymarkets-cloud01.com/export/...
+image_plenty_url=https://panasiam.plentymarkets-cloud01.com/export/...
+plenty_warehouse=
+google_sheet_id=
+google_sheet_rows=1991
