--- a/data/example_config.ini
+++ b/data/example_config.ini
@@ -7,3 +7,4 @@ image_plenty_url=https://panasiam.plentymarkets-cloud01.com/export/...
 plenty_warehouse=
 google_sheet_id=
 google_sheet_rows=1991
+log-path=
