--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,6 @@ data/.credentials.json
 data/config.ini
 data/token.pickle
 /Tests
+/backup_data
+prepare_data_folder_for_prod.sh
+prepare_data_folder_for_dist.sh
